--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ input, select {
     margin-left: 2em;
 }
 .error {
-    color: #e74c3c;
+    color: #3b5998;
     font-size: 1.5em;
     margin: 1em 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
